# sdpa-dd

./: ChangeLog  Dockerfile_ubuntu22.04  Dockerfile_ubuntu22.04~  Makefile.am  README.md  configure.ac  example1.result  sdpa_algebra.h  sdpa_dataset.cpp  sdpa_dataset.h  sdpa_io.cpp  sdpa_io.h  sdpa_jordan.cpp  sdpa_jordan.h  sdpa_linear.cpp  sdpa_linear.h  sdpa_main.cpp  sdpa_newton.cpp  sdpa_newton.h  sdpa_parts.cpp  sdpa_parts.h  sdpa_struct.cpp  sdpa_struct.h  sdpa_tool.cpp  sdpa_tool.h
SDPLIB/: arch0.result  arch2.result  arch4.result  arch8.result  control1.result  control10.result  control11.result  control2.result  control3.result  control4.result  control5.result  control6.result  control7.result  control8.result  control9.result  equalG11.result  equalG51.result  go.sh  go2.sh  gpp100.result  gpp124-1.result  gpp124-2.result  gpp124-3.result  gpp124-4.result  gpp250-1.result  gpp250-2.result  gpp250-3.result  gpp250-4.result  gpp500-1.result  gpp500-2.result  gpp500-3.result  gpp500-4.result  hinf1.result  hinf10.result  hinf11.result  hinf12.result  hinf13.result  hinf14.result  hinf15.result  hinf2.result  (+53 more)
mplapack/: Makefile  Mlsame.cpp  Raxpy.cpp  Raxpy_omp.cpp  Rcombssq.cpp  Rcopy.cpp  Rcopy_omp.cpp  Rdot.cpp  Rdot_omp.cpp  Rgemm_NN_blocked_01.cpp  Rgemm_NN_blocked_omp.cpp  Rgemm_NN_blocked_omp_benchmark.cpp  Rgemm_NN_macro_omp.cpp  Rgemm_NN_macro_omp_benchmark.cpp  Rgemm_NN_omp.cpp  Rgemm_NN_omp_benchmark.cpp  Rgemm_NT_omp.cpp  Rgemm_TN_omp.cpp  Rgemm_TT_omp.cpp  Rgemm_omp.cpp  Rgemm_ref.cpp  Rgemm_test.cpp  Rgemv.cpp  Rger.cpp  Risnan.cpp  Rlae2.cpp  Rlaev2.cpp  Rlaisnan.cpp  Rlamch.cpp  Rlanst.cpp  Rlansy.cpp  Rlapy2.cpp  Rlarf.cpp  Rlarfb.cpp  Rlarfg.cpp  Rlarft.cpp  Rlartg.cpp  Rlascl.cpp  Rlaset.cpp  Rlasr.cpp  (+39 more)
